duplicate analysis done

--- a/exploratory_analysis/web_traffic.ipynb
+++ b/exploratory_analysis/web_traffic.ipynb
@@ -441,6 +441,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46277a2b-8e82-417a-84a0-ca4b6631ab8d",
+   "metadata": {},
+   "source": [
+    "### Duplicate Analysis\n",
+    "\n",
+    "- No duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3f27ec85-8ee6-40a6-b3ae-6118c1076abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Session ID</th>\n",
+       "      <th>Pageviews</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Traffic Source</th>\n",
+       "      <th>Actions</th>\n",
+       "      <th>Time spent (in minutes)</th>\n",
+       "      <th>Page Title</th>\n",
+       "      <th>Contact ID</th>\n",
+       "      <th>Primary Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Session ID, Pageviews, Visit Date, Traffic Source, Actions, Time spent (in minutes), Page Title, Contact ID, Primary Topic]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81adf03c-dd28-4fcb-ba2b-3c28ffb4ba88",
+   "metadata": {},
+   "source": [
+    "### Column value counts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "06ff0c43-b6f9-41c4-b69b-d95e8a43fd5c",
@@ -721,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "b5e4df15-0f43-480c-86e8-b45e1a644478",
    "metadata": {},
    "outputs": [
@@ -838,7 +914,7 @@
        "4                        3       Home  00v2000000ez1ucAAA  Fund Universe  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "94a67304-0aa6-4213-bbc3-cf6ec81c144c",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1129,7 @@
        "[131 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1140,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
+   "id": "93cdd738-dd97-4000-b488-c2e30121522c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Session ID</th>\n",
+       "      <th>Pageviews</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Traffic Source</th>\n",
+       "      <th>Actions</th>\n",
+       "      <th>Time spent (in minutes)</th>\n",
+       "      <th>Page Title</th>\n",
+       "      <th>Contact ID</th>\n",
+       "      <th>Primary Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6313</th>\n",
+       "      <td>11001732</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6-Jan-23</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Scroll 75%</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Invest</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Invest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7024</th>\n",
+       "      <td>11000241</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7-Jan-23</td>\n",
+       "      <td>Youtube</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10416</th>\n",
+       "      <td>11003116</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Funds</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14035</th>\n",
+       "      <td>11000165</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Scroll 75%</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418679</th>\n",
+       "      <td>11002626</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7-Feb-24</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Funds</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419187</th>\n",
+       "      <td>11000810</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8-Feb-24</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>CTA</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Navigation</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Navigation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422591</th>\n",
+       "      <td>11001145</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11-Feb-24</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Video</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Navigation</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Navigation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424821</th>\n",
+       "      <td>11003049</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13-Feb-24</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425098</th>\n",
+       "      <td>11001520</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13-Feb-24</td>\n",
+       "      <td>Youtube</td>\n",
+       "      <td>Scroll 75%</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Strategy</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Strategy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Session ID  Pageviews Visit Date Traffic Source     Actions  \\\n",
+       "0         11002649          4   1-Jan-23       LinkedIn    Download   \n",
+       "6313      11001732          5   6-Jan-23         Google  Scroll 75%   \n",
+       "7024      11000241          2   7-Jan-23        Youtube    Download   \n",
+       "10416     11003116          5  11-Jan-23       LinkedIn    Download   \n",
+       "14035     11000165          2  14-Jan-23       LinkedIn  Scroll 75%   \n",
+       "...            ...        ...        ...            ...         ...   \n",
+       "418679    11002626          5   7-Feb-24        YouTube    Download   \n",
+       "419187    11000810          6   8-Feb-24       LinkedIn         CTA   \n",
+       "422591    11001145          4  11-Feb-24       LinkedIn       Video   \n",
+       "424821    11003049          7  13-Feb-24         Google    Download   \n",
+       "425098    11001520          5  13-Feb-24        Youtube  Scroll 75%   \n",
+       "\n",
+       "        Time spent (in minutes)  Page Title          Contact ID  Primary Topic  \n",
+       "0                             9     Contact  00v2000000KM7EdAAL  Fund Universe  \n",
+       "6313                          4      Invest  00v2000000KM7EdAAL         Invest  \n",
+       "7024                          1        Home  00v2000000KM7EdAAL            NaN  \n",
+       "10416                         2       Funds  00v2000000KM7EdAAL          Funds  \n",
+       "14035                         9        Home  00v2000000KM7EdAAL            NaN  \n",
+       "...                         ...         ...                 ...            ...  \n",
+       "418679                        3       Funds  00v2000000KM7EdAAL          Funds  \n",
+       "419187                        8  Navigation  00v2000000KM7EdAAL     Navigation  \n",
+       "422591                        8  Navigation  00v2000000KM7EdAAL     Navigation  \n",
+       "424821                       13        Home  00v2000000KM7EdAAL            NaN  \n",
+       "425098                       10    Strategy  00v2000000KM7EdAAL       Strategy  \n",
+       "\n",
+       "[101 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df[\"Contact ID\"] == \"00v2000000KM7EdAAL\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "4b52ce09-c2c8-4c45-807a-54de1da73524",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1377,7 @@
        "Name: count, Length: 126, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,8 +1388,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ec40152c-a1a9-4b41-8c30-f371e41a4d6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contact_path = \"../data/Contact_details.csv\"\n",
+    "contact_df = pd.read_csv(contact_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8745ba54-241a-4164-9de8-46a5d450f909",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contact Name</th>\n",
+       "      <th>Company_name</th>\n",
+       "      <th>Contact_id</th>\n",
+       "      <th>Local Salutation</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Abra Boris</td>\n",
+       "      <td>Bloomberg</td>\n",
+       "      <td>00v2000000Mhvw9AAB</td>\n",
+       "      <td>Dear Abra Boris</td>\n",
+       "      <td>EMEA</td>\n",
+       "      <td>UK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Alvarado Bowman</td>\n",
+       "      <td>Deloitte &amp; Touche</td>\n",
+       "      <td>00v2000000bFleNAAS</td>\n",
+       "      <td>Dear Alvarado Bowman</td>\n",
+       "      <td>EMEA</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Alec Contreras</td>\n",
+       "      <td>Diebold Inc.</td>\n",
+       "      <td>00v2000000cVOx3AAG</td>\n",
+       "      <td>Dear Alec Contreras</td>\n",
+       "      <td>EMEA</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Amelia Whitley</td>\n",
+       "      <td>Kemper Insurance</td>\n",
+       "      <td>00v2000000IZ0FkAAL</td>\n",
+       "      <td>Dear Amelia Whitley</td>\n",
+       "      <td>EMEA</td>\n",
+       "      <td>Uk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>acqueline Barnett</td>\n",
+       "      <td>Liberty Mutual Insurance</td>\n",
+       "      <td>00v2000000MOJDNAA5</td>\n",
+       "      <td>Dear acqueline Barnett</td>\n",
+       "      <td>EMEA</td>\n",
+       "      <td>Uk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3784</th>\n",
+       "      <td>Raymond Rollins</td>\n",
+       "      <td>HSBC</td>\n",
+       "      <td>00v2000000KsAcFAAV</td>\n",
+       "      <td>Dear Raymond Rollins</td>\n",
+       "      <td>AMER</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3787</th>\n",
+       "      <td>Patel Wilder</td>\n",
+       "      <td>HSBC</td>\n",
+       "      <td>00v2000000KsAjEAAV</td>\n",
+       "      <td>Dear Patel Wilder</td>\n",
+       "      <td>AMER</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3792</th>\n",
+       "      <td>Craig Bates</td>\n",
+       "      <td>HSBC</td>\n",
+       "      <td>00v2000000KrhxSAAR</td>\n",
+       "      <td>Dear Craig Bates</td>\n",
+       "      <td>AMER</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3813</th>\n",
+       "      <td>Barrera Stokes</td>\n",
+       "      <td>HSBC</td>\n",
+       "      <td>00v2000000Ka4lrAAB</td>\n",
+       "      <td>Dear Barrera Stokes</td>\n",
+       "      <td>AMER</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3865</th>\n",
+       "      <td>Chavez Weeks</td>\n",
+       "      <td>BlackRock</td>\n",
+       "      <td>00v2000000Krj29AAB</td>\n",
+       "      <td>Dear Chavez Weeks</td>\n",
+       "      <td>AMER</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>126 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Contact Name              Company_name          Contact_id  \\\n",
+       "18           Abra Boris                 Bloomberg  00v2000000Mhvw9AAB   \n",
+       "46      Alvarado Bowman         Deloitte & Touche  00v2000000bFleNAAS   \n",
+       "57       Alec Contreras              Diebold Inc.  00v2000000cVOx3AAG   \n",
+       "112      Amelia Whitley          Kemper Insurance  00v2000000IZ0FkAAL   \n",
+       "120   acqueline Barnett  Liberty Mutual Insurance  00v2000000MOJDNAA5   \n",
+       "...                 ...                       ...                 ...   \n",
+       "3784    Raymond Rollins                      HSBC  00v2000000KsAcFAAV   \n",
+       "3787       Patel Wilder                      HSBC  00v2000000KsAjEAAV   \n",
+       "3792        Craig Bates                      HSBC  00v2000000KrhxSAAR   \n",
+       "3813     Barrera Stokes                      HSBC  00v2000000Ka4lrAAB   \n",
+       "3865       Chavez Weeks                 BlackRock  00v2000000Krj29AAB   \n",
+       "\n",
+       "            Local Salutation Region         Country  \n",
+       "18           Dear Abra Boris   EMEA              UK  \n",
+       "46      Dear Alvarado Bowman   EMEA  United Kingdom  \n",
+       "57       Dear Alec Contreras   EMEA  United Kingdom  \n",
+       "112      Dear Amelia Whitley   EMEA              Uk  \n",
+       "120   Dear acqueline Barnett   EMEA              Uk  \n",
+       "...                      ...    ...             ...  \n",
+       "3784    Dear Raymond Rollins   AMER          Canada  \n",
+       "3787       Dear Patel Wilder   AMER          Canada  \n",
+       "3792        Dear Craig Bates   AMER          Canada  \n",
+       "3813     Dear Barrera Stokes   AMER          Canada  \n",
+       "3865       Dear Chavez Weeks   AMER          Canada  \n",
+       "\n",
+       "[126 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_contacts = web_df[web_df[\"Session ID\"] == 11002649][\"Contact ID\"].unique()\n",
+    "\n",
+    "contact_df[contact_df[\"Contact_id\"].isin(unique_contacts)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccf6c98f-37b8-4d55-92e5-ded8c650e30f",
    "metadata": {},
    "outputs": [],
    "source": []
