--- a/exploratory_analysis/contact_details.ipynb
+++ b/exploratory_analysis/contact_details.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5b273180-9dec-4352-aabd-e14bc0af4409",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "4   EMEA      UK  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "86f8dbbe-379d-483a-a6be-756badd414c0",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "01067782-1e1f-423e-a3f0-0f846c86fdc2",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "freq             1700  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "id": "361a5256-6684-4abe-8fa2-48a17f73555e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contact Name</th>\n",
+       "      <th>Company_name</th>\n",
+       "      <th>Contact_id</th>\n",
+       "      <th>Local Salutation</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Contact Name, Company_name, Contact_id, Local Salutation, Region, Country]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contact_df[contact_df.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "b9d70153-8df8-4738-8978-791f9acfba2b",
    "metadata": {},
    "outputs": [
@@ -323,7 +378,7 @@
        "Name: count, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1f4b9012-46da-4bf3-b331-d7aa16b0d5b8",
    "metadata": {},
    "outputs": [
@@ -347,7 +402,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9d302aee-d00e-44a5-9502-2429fbbc3f44",
    "metadata": {},
    "outputs": [
@@ -385,7 +440,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "fe07c9ef-eb6a-41d0-9947-9a87b54c26c9",
    "metadata": {},
    "outputs": [
@@ -423,7 +478,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "16b3e606-5b3c-4b22-b6f0-bb8ca6f6ff67",
    "metadata": {},
    "outputs": [
@@ -478,7 +533,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d71344b-e557-4ae6-b581-2b4f7984b6dc",
+   "id": "ed409276-09db-4de2-a20d-17f6703b531b",
    "metadata": {},
    "outputs": [],
    "source": []
