email cleaned data joined with contact details

--- a/data_cleaning/email_clean_nb.ipynb
+++ b/data_cleaning/email_clean_nb.ipynb
@@ -133,31 +133,161 @@
        "      <td>Events - In Person</td>\n",
        "      <td>/</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128231</th>\n",
+       "      <td>701D0000000NHUeIAO</td>\n",
+       "      <td>00v2000000ZCFyUAAX</td>\n",
+       "      <td>Meeting for  Product fund Insights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/22/2023</td>\n",
+       "      <td>Digital event</td>\n",
+       "      <td>Adhoc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128232</th>\n",
+       "      <td>701D0000000NHUeIAO</td>\n",
+       "      <td>00v2000000KrgKjAAJ</td>\n",
+       "      <td>Meeting for  Product fund Insights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/22/2023</td>\n",
+       "      <td>Digital event</td>\n",
+       "      <td>Adhoc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128233</th>\n",
+       "      <td>701D0000000NHUeIAO</td>\n",
+       "      <td>00v2000000H3dwgAAB</td>\n",
+       "      <td>Meeting for  Product fund Insights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/22/2023</td>\n",
+       "      <td>Digital event</td>\n",
+       "      <td>Adhoc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128234</th>\n",
+       "      <td>701D0000000NHUeIAO</td>\n",
+       "      <td>00v2000000Mj8xWAAR</td>\n",
+       "      <td>Meeting for  Product fund Insights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/22/2023</td>\n",
+       "      <td>Digital event</td>\n",
+       "      <td>Adhoc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128235</th>\n",
+       "      <td>701D0000000NHUeIAO</td>\n",
+       "      <td>00v2000000LNc1SAAT</td>\n",
+       "      <td>Meeting for  Product fund Insights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/22/2023</td>\n",
+       "      <td>Digital event</td>\n",
+       "      <td>Adhoc</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>128236 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Email_Campaign_id          contact_id               email_subject  \\\n",
-       "0  701200000006cIGAAY  00v2000000IZVYWAA5  Roadshow Houston (Advisor)   \n",
-       "1  701200000006cIGAAY  00v2000000IZW13AAH  Roadshow Houston (Advisor)   \n",
-       "2  701200000006cIGAAY  00v2000000IZUepAAH  Roadshow Houston (Advisor)   \n",
-       "3  701200000006cIGAAY  00v2000000IZWDdAAP  Roadshow Houston (Advisor)   \n",
-       "4  701200000006cIGAAY  00v2000000IZUdSAAX  Roadshow Houston (Advisor)   \n",
+       "         Email_Campaign_id          contact_id  \\\n",
+       "0       701200000006cIGAAY  00v2000000IZVYWAA5   \n",
+       "1       701200000006cIGAAY  00v2000000IZW13AAH   \n",
+       "2       701200000006cIGAAY  00v2000000IZUepAAH   \n",
+       "3       701200000006cIGAAY  00v2000000IZWDdAAP   \n",
+       "4       701200000006cIGAAY  00v2000000IZUdSAAX   \n",
+       "...                    ...                 ...   \n",
+       "128231  701D0000000NHUeIAO  00v2000000ZCFyUAAX   \n",
+       "128232  701D0000000NHUeIAO  00v2000000KrgKjAAJ   \n",
+       "128233  701D0000000NHUeIAO  00v2000000H3dwgAAB   \n",
+       "128234  701D0000000NHUeIAO  00v2000000Mj8xWAAR   \n",
+       "128235  701D0000000NHUeIAO  00v2000000LNc1SAAT   \n",
        "\n",
-       "   is_sent  is_delivered  is_link_clicked  is_hard_bounce  is_bounce  \\\n",
-       "0        1             1                0               0          0   \n",
-       "1        1             1                0               0          0   \n",
-       "2        1             1                0               0          0   \n",
-       "3        1             1                0               0          0   \n",
-       "4        1             1                0               0          0   \n",
+       "                             email_subject  is_sent  is_delivered  \\\n",
+       "0               Roadshow Houston (Advisor)        1             1   \n",
+       "1               Roadshow Houston (Advisor)        1             1   \n",
+       "2               Roadshow Houston (Advisor)        1             1   \n",
+       "3               Roadshow Houston (Advisor)        1             1   \n",
+       "4               Roadshow Houston (Advisor)        1             1   \n",
+       "...                                    ...      ...           ...   \n",
+       "128231  Meeting for  Product fund Insights        1             1   \n",
+       "128232  Meeting for  Product fund Insights        1             1   \n",
+       "128233  Meeting for  Product fund Insights        1             1   \n",
+       "128234  Meeting for  Product fund Insights        1             1   \n",
+       "128235  Meeting for  Product fund Insights        1             1   \n",
        "\n",
-       "   is_opt_out  is_open Sent_date       Campaign_type Primary Topic  \n",
-       "0           0        1  2/7/2023  Events - In Person             /  \n",
-       "1           0        1  2/7/2023  Events - In Person             /  \n",
-       "2           0        0  2/7/2023  Events - In Person             /  \n",
-       "3           0        0  2/7/2023  Events - In Person             /  \n",
-       "4           0        0  2/7/2023  Events - In Person             /  "
+       "        is_link_clicked  is_hard_bounce  is_bounce  is_opt_out  is_open  \\\n",
+       "0                     0               0          0           0        1   \n",
+       "1                     0               0          0           0        1   \n",
+       "2                     0               0          0           0        0   \n",
+       "3                     0               0          0           0        0   \n",
+       "4                     0               0          0           0        0   \n",
+       "...                 ...             ...        ...         ...      ...   \n",
+       "128231                0               0          0           0        0   \n",
+       "128232                0               0          0           0        0   \n",
+       "128233                0               0          0           0        0   \n",
+       "128234                0               0          0           0        0   \n",
+       "128235                0               0          0           0        0   \n",
+       "\n",
+       "        Sent_date       Campaign_type Primary Topic  \n",
+       "0        2/7/2023  Events - In Person             /  \n",
+       "1        2/7/2023  Events - In Person             /  \n",
+       "2        2/7/2023  Events - In Person             /  \n",
+       "3        2/7/2023  Events - In Person             /  \n",
+       "4        2/7/2023  Events - In Person             /  \n",
+       "...           ...                 ...           ...  \n",
+       "128231  6/22/2023       Digital event         Adhoc  \n",
+       "128232  6/22/2023       Digital event         Adhoc  \n",
+       "128233  6/22/2023       Digital event         Adhoc  \n",
+       "128234  6/22/2023       Digital event         Adhoc  \n",
+       "128235  6/22/2023       Digital event         Adhoc  \n",
+       "\n",
+       "[128236 rows x 13 columns]"
       ]
      },
      "execution_count": 2,
@@ -169,7 +299,7 @@
     "email_path = \"../data/Email_Campaign_Details.csv\"\n",
     "# email_df = pd.read_csv(email_path, encoding='mac_roman', parse_dates=[\"Sent_date\"])\n",
     "email_df = pd.read_csv(email_path, encoding='mac_roman')\n",
-    "email_df.head()"
+    "email_df"
    ]
   },
   {
@@ -286,6 +416,25 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "d9131b4c-d070-4866-88a0-813a5af10fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# join contact dataframe with email campaign data\n",
+    "\n",
+    "contact_df = pd.read_csv(\"../cleaned_data/contact_details_cleaned.csv\")\n",
+    "\n",
+    "email_df = email_df.merge(contact_df,\n",
+    "                          how=\"inner\",\n",
+    "                          left_on = \"contact_id\",\n",
+    "                          right_on = \"Contact_id\"\n",
+    "                         )\n",
+    "email_df.drop([\"Contact_id\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "75a744d5-ad35-4e7d-a4f2-634aa65ab4c3",
    "metadata": {},
    "outputs": [],
