session id fixed

--- a/data_cleaning/web_clean_nb.ipynb
+++ b/data_cleaning/web_clean_nb.ipynb
@@ -179,6 +179,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ccafa624-537f-419b-a71b-56678c9d2cf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Make a new unique session ID\n",
+    "\n",
+    "web_df[\"Session ID\"] = web_df[\"Session ID\"] + web_df[\"Contact ID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "557ac384-8521-4d38-ae61-df927e1a5609",
    "metadata": {},
    "outputs": [
@@ -193,7 +205,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "794f6ff8-4d09-4943-8439-351f9c82f207",
    "metadata": {},
    "outputs": [
@@ -231,7 +243,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e2914ba1-7e19-4faf-b997-3a6e5720fca7",
    "metadata": {},
    "outputs": [],
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "962b2618-1f4e-479a-bbe1-5e4795d984a9",
    "metadata": {},
    "outputs": [
@@ -312,7 +324,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,30 +335,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ac11cf1e-96b9-43b7-91da-5c8009001a1e",
+   "execution_count": 9,
+   "id": "7dd03340-2005-4537-aac7-7c55f346e85b",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Correct Primary Topic column\n",
     "\n",
-    "web_df[\"Primary Topic\"] = web_df[\"Primary Topic\"].fillna(\"Undefined\")\n",
-    "\n",
-    "topic_map = {\n",
-    "    \"funds\": \"Funds\",\n",
-    "    \"Fund Universe\": \"Undefined\",\n",
-    "    \"/\": \"Undefined\",\n",
-    "    \";\": \"Undefined\",\n",
-    "    \"4345\": \"Undefined\"\n",
-    "}\n",
-    "\n",
-    "web_df[\"Primary Topic\"] = web_df[\"Primary Topic\"] \\\n",
-    "    .map(lambda x: x if x not in topic_map.keys() else topic_map[x])"
+    "web_df[\"Primary Topic\"] = web_df[\"Page Title\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "id": "228124be-66b1-47e1-8d2c-f64af3cd4738",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Page Title  Primary Topic\n",
+       "Funds       Funds            119754\n",
+       "Home        Home             102631\n",
+       "Navigation  Navigation        85356\n",
+       "Strategy    Strategy          51686\n",
+       "Contact     Contact           34595\n",
+       "Invest      Invest            34309\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[[\"Page Title\", \"Primary Topic\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "f54804d1-696e-4b88-b438-066b7ed8fc3f",
    "metadata": {},
    "outputs": [
@@ -379,35 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "98a492f8-bd61-4eb2-8153-4c20d2135001",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Page Title  Primary Topic\n",
-       "Funds       Funds            119754\n",
-       "Home        Undefined        102631\n",
-       "Navigation  Navigation        85356\n",
-       "Strategy    Strategy          51686\n",
-       "Contact     Undefined         34595\n",
-       "Invest      Invest            34309\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "web_df[web_df[\"Primary Topic\"].notnull()][[\"Page Title\", \"Primary Topic\"]].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2b98f18c-79f1-474b-90c0-7a6a9208f0a1",
    "metadata": {},
    "outputs": [],
