web campaign data added with contact

--- a/data_cleaning/web_clean_nb.ipynb
+++ b/data_cleaning/web_clean_nb.ipynb
@@ -409,6 +409,25 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "42ef429d-6f60-4862-955a-a3678adc89d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# join contact dataframe with email campaign data\n",
+    "\n",
+    "contact_df = pd.read_csv(\"../cleaned_data/contact_details_cleaned.csv\")\n",
+    "\n",
+    "web_df = web_df.merge(contact_df,\n",
+    "                      how=\"inner\",\n",
+    "                      left_on = \"Contact ID\",\n",
+    "                      right_on = \"Contact_id\"\n",
+    "                     )\n",
+    "web_df.drop([\"Contact_id\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "2b98f18c-79f1-474b-90c0-7a6a9208f0a1",
    "metadata": {},
    "outputs": [],
